# mercaido

./: .envrc  .gitignore  README.md  do  flake.nix
.reuse/: dep5
examples/mercaido_dummy_service/: README.md  pyproject.toml
examples/mercaido_dummy_service/src/mercaido_dummy_service/: __init__.py
examples/mercaido_panorama/: README.md  pyproject.toml
examples/mercaido_panorama/src/mercaido_panorama/: __init__.py  __main__.py  panorama.py
mercaido_client/: README.md  pyproject.toml
mercaido_client/scripts/: pbgen.py
mercaido_client/src/mercaido_client/: testing_utils.py
mercaido_client/src/mercaido_client/gis/: __init__.py  exception.py  geoserver.py
mercaido_client/src/mercaido_client/mq/: __init__.py  client.py
mercaido_client/src/mercaido_client/pb/: __init__.py  mercaido.py  mercaido_pb2.py  message.py
mercaido_client/src/mercaido_client/pb/proto/: mercaido.proto
mercaido_client/tests/: conftest.py  test_attrs.py  test_client.py  test_pb.py
mercaido_server/: README.md  pyproject.toml
mercaido_server/example_config/: development-example.ini  gunicorn-example.ini
mercaido_server/src/mercaido_server/: __init__.py  __main__.py  attrs.py  dispatcher.py  mq.py  pshell.py  routes.py  security.py
mercaido_server/src/mercaido_server/migrations/: env.py
mercaido_server/src/mercaido_server/migrations/versions/: 20230627_8a2e9175ee3d.py  20230721_af2d025ce718.py  20230908_e47930380209.py  20230914_377f052dc735.py  20240530_230c147444f1.py  20240614_2cc80a151223.py
mercaido_server/src/mercaido_server/models/: __init__.py  featureserver.py  job.py  mediaserver.py  meta.py  recordingserver.py  service.py  types.py
mercaido_server/src/mercaido_server/static/css/: app.css  material-icons.css  materialize.css  materialize.min.css
mercaido_server/src/mercaido_server/static/js/: app.js  date-fns.js  format.js  format.js.map  init.js  jobs.js  materialize.js  materialize.min.js  materialize.min.js.map
mercaido_server/src/mercaido_server/templates/: 404.jinja2  home.jinja2  layout.jinja2  macros.jinja2  navbar.jinja2  service.jinja2  settings.jinja2
mercaido_server/src/mercaido_server/templates/settings/featureservers/: form.jinja2  index.jinja2  layers.jinja2
mercaido_server/src/mercaido_server/templates/settings/mediaservers/: form.jinja2  index.jinja2
mercaido_server/src/mercaido_server/templates/settings/recordingservers/: form.jinja2  index.jinja2
mercaido_server/src/mercaido_server/views/: errors.py  feature_servers.py  home.py  hooks.py  jobs.py  media_servers.py  recording_servers.py  service.py  settings.py
mercaido_server/src/mercaido_server/views/cards/: __init__.py  featureserver.py  mediaserver.py  recordingserver.py  service.py
mercaido_server/tests/: test_attrs.py
nix/: mercaido.nix  tailwind.nix
