[tool.poetry]
name = "mercaido-client"
version = "0.2.0"
description = "Client package for Mercaido."
authors = ["Erwin Boskma", "Frank Smit"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mercaido_client", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9"
protobuf = "^4.23.4"
pika = "^1.3.2"
gdal = { version = "3.8.5", extras = ["numpy"] }
numpy = "^2.0.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
types-protobuf = "^4.23.0.2"
types-pika = "^1.2.0b1"
black = "^23.7.0"
ruff = "^0.0.285"
mypy = "^1.5.1"
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = "mercaido_client.pb.mercaido_pb2"
ignore_errors = true
